5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1759_2101.log
== TEST (2019-05-29 00:06:33) 
-- CODE:
n = int(input("insira o numero:"))

a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < size(n)):
	if(n >= 2):
		v[i]= a
	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = zeros(n,dtype = int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:06:37) 
-- CODE:
n = int(input("insira o numero:"))

a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < size(n)):
	if(n >= 2):
		v[i]= a
	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = zeros(n,dtype = int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:06:55) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < size(n)):
	if(n >= 2):
		v[i]= a
	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:07:30) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n >= 2):
		v[i]= a
	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:08:46) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
		i = i + 1
	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:08:59) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
		i = i + 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:12:04) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0
v = zeros(n,dtype = int)


if(n == 2):
	v[i] = i
	i = i + 1
	
		
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:13:16) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		soma = soma + v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:13:20) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		soma = soma + v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:13:48) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0
v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = i
		soma = soma + v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:15) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = v[i] + v[i] -1
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:21) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = v[i] + v[i] -1
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:35) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:54) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:58) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))


a = 0
b = 1
i = 0
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[i] = v[i]
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:19:42) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))



i = 0
a = 1
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[a] = v[i] + v[a]
		a = a + 1
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:20:43) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))



i = 0
a = 1
soma = 0

v = zeros(n,dtype = int)

while(i < n):
	if(n == 2):
		v[i] = i
	elif(n > 2 ):
		v[n] = v[i] + v[a]
		a = a + 1
	i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:25:27) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))



i = 0
a = 1
soma = 0

v = zeros(n,dtype = int)
if(n == 2):
		v[i] = i
while(i < n):
		if(n > 2 ):
			v[-1] = v[i] + v[-1]
			
		i = i + 1
		
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:26:27) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))



i = 0
a = 1
soma = 0

v = zeros(n,dtype = int)
if(n == 2):
		v[i] = i
while(i < n):
		if(n > 2 ):
			v[-1] = v[i] + v[-1]
			
			i = i + 1
		
	
print(v)
-- EXECUTION TIME:
0.566903
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
insira o numero:[0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
insira o numero:[0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
insira o numero:[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:28:30) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v[i] = i
	i = i + 1
 print(v)
-- ERROR:
File "XXXX", line 8
    print(v)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:28:34) 
-- CODE:
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v[i] = i
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    v = zeros(n, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:28:51) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v[i] = i
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:29:20) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v[i] = i
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:30:18) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v = [0 1]
	
print(v)
-- ERROR:
File "XXXX", line 7
    v = [0 1]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:30:36) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v = [0,1]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:30:46) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)

if(n == 2):
	v = [0 1]
	
print(v)
-- ERROR:
File "XXXX", line 7
    v = [0 1]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:36:38) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)


if(n==2):
	v = arrange(n)
	
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:36:51) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)


if(n==2):
	v = arange(n)
	
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:42:04) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)


if(n==2):
	v = arange(n)
elif(n>2):
	while(i < n-1):
		v = sum(v) + v[i]
	
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:42:38) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)


if(n==2):
	v = arange(n)
elif(n>2):
	while(i < n-1):
		b = sum(v)
		v = b + v[i]
	
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:43:00) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n, dtype=int)


if(n==2):
	v = arange(n)
elif(n>2):
	while(i < n-1):
		b = sum(v)
		v = b + v[i]
		i = i + 1
	
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:12:40) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
j = 1
v = zeros(n)


if(n==2):
	v = arange(n)
elif(n>2):
	while(i < n):
		v[i] = v[i] + v[j]
		j = j + 1
		i = 1 + 1
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:03:36) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0

v = zeros(n)
v[0] = 0
v[1] = 1



	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:03:41) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0


v[0] = 0
v[1] = 1



	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:06:59) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0

if(n==2):
	v = arange(n)
elif(n > 2):
	v[i] = v[i] + v[:i]

	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:07:21) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n,dtype =int)
if(n==2):
	v = arange(n)
elif(n > 2):
	v[i] = v[i] + v[:i]

	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:09:58) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n,dtype =int)

v[i] = v[0] + v[1]


if(n==2):
	v = arange(n)
elif(n > 2):
	while(i < size(n)):
	v[i] = v[i] + v[:i]
	i = i + 1

	
print(v[i])
-- ERROR:
File "XXXX", line 13
    v[i] = v[i] + v[:i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:10:11) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n,dtype =int)

v[i] = v[0] + v[1]


if(n==2):
	v = arange(n)
elif(n > 2):
	while(i < size(n)):
		v[i] = v[i] + v[:i]
		i = i + 1

	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:10:25) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n,dtype =int)

v[i] = v[0] + v[1]


if(n==2):
	v = arange(n)
elif(n > 2):
	while(i < size(n)):
		i = i + 1

	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:11:49) 
-- CODE:
from numpy import *
n = int(input("insira o numero:"))
i = 0
v = zeros(n,dtype =int)




if(n==2):
	v = arange(n)
elif(n > 2):
	while(i < size(n)):
		v[n] = v[i] - i
		i = i + 1

	
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
